tests/ixml_not_018_ab.test
START
formula = first, second.
first = ~[], !'a'.
second = 'a' | 'b'.
INPUT
aa
OUTPUT
ixml:1:2: syntax error
aa
 ^
END